# koin-app

./: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
data/: issuers.json
public/: splashscreen.html
src/: App.css  App.tsx  main.tsx  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: issuers.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: coins.rs  export.rs  issuers.rs  mod.rs  notebooks.rs  settings.rs  utils.rs
src-tauri/src/handlers/: image_handler.rs  mod.rs
src-tauri/src/types/: coins.rs  export.rs  issuers.rs  mod.rs  notebooks.rs  settings.rs  validators.rs
src/commands/: coins.ts
src/components/: data-table.tsx
src/components/composite/: coin-preview-images.tsx  data-table-action-header.tsx  data-table-column-header.tsx  data-table-pagination.tsx  data-table.tsx  image-upload.tsx  issuer-flag.tsx  logo.tsx  search-input.tsx  titlebar.tsx
src/components/ui/: button-group.tsx  button.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  label.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  (+8 more)
src/context/: coin-selection-context.tsx  issuer-selection-context.tsx  notebook-selection-context.tsx
src/hooks/: use-pagination.ts  use-toast-form-errors.tsx
src/styles/: index.css  index.scss
src/utils/: asFraction.tsx  resolveImageSrc.ts  truncate.ts
(+122 files in other folders)
