[package]
name = "koin-app"
version = "0.1.0"
description = "A digital coin cabinet"
authors = ["Ahmet Buyukyilmaz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koin_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
validator = { version = "0.16", features = ["derive"] }
chrono = "0.4"
url = "2"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
image = "0.25"
base64 = "0.22"
zip = "0.6"

